# json-logs-reporter

./: .gitignore  dune-project  flake.nix  json-logs-reporter.opam
.github/workflows/: build_nix.yml
example/: dune  main.ml
nix/: default.nix  overlay.nix
src/: dune  json_logs_reporter.ml  main.ml
